// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipeEntryView renders correctly 1`] = `
<form>
  <TextInput
    error=""
    label="Title"
    name="title"
    onChange={[Function]}
    placeholder=""
    value=""
  />
  <TextInput
    error=""
    label="Description"
    name="description"
    onChange={[Function]}
    placeholder=""
    value=""
  />
  <TextArea
    cols=""
    error=""
    label="Ingredient List"
    name="ingredients"
    onChange={[Function]}
    placeholder=""
    readonly={false}
    rows="10"
    value=""
  />
  <TextArea
    cols=""
    error=""
    label="Directions"
    name="directions"
    onChange={[Function]}
    placeholder=""
    readonly={false}
    rows="10"
    value=""
  />
  <SelectInput
    defaultOption="select category"
    error=""
    label="Category"
    name="category"
    onChange={[Function]}
    options={Array []}
    value=""
  />
  <button
    className="btn btn-primary"
    disabled={false}
    id="save"
    onClick={[Function]}
    type="submit"
  >
    save
  </button>
  <button
    className="btn btn-link"
    disabled={false}
    id="cancel"
    onClick={[Function]}
    type="button"
  >
    cancel
  </button>
</form>
`;

exports[`RecipeEntryView renders correctly when saving 1`] = `
<form>
  <TextInput
    error=""
    label="Title"
    name="title"
    onChange={[Function]}
    placeholder=""
    value=""
  />
  <TextInput
    error=""
    label="Description"
    name="description"
    onChange={[Function]}
    placeholder=""
    value=""
  />
  <TextArea
    cols=""
    error=""
    label="Ingredient List"
    name="ingredients"
    onChange={[Function]}
    placeholder=""
    readonly={false}
    rows="10"
    value=""
  />
  <TextArea
    cols=""
    error=""
    label="Directions"
    name="directions"
    onChange={[Function]}
    placeholder=""
    readonly={false}
    rows="10"
    value=""
  />
  <SelectInput
    defaultOption="select category"
    error=""
    label="Category"
    name="category"
    onChange={[Function]}
    options={Array []}
    value=""
  />
  <button
    className="btn btn-primary"
    disabled={true}
    id="save"
    onClick={[Function]}
    type="submit"
  >
    saving...
  </button>
  <button
    className="btn btn-link"
    disabled={true}
    id="cancel"
    onClick={[Function]}
    type="button"
  >
    cancel
  </button>
</form>
`;
